--- a/css/main-minimal.css
+++ b/css/main-minimal.css
@@ -11,3 +11,8 @@ footer.footer-min {
   border-top: 1px solid #eeeeee;
   text-align: center;
 }
+
+/* To center images */
+.center {
+    text-align: center;
+}
